MDEV-9911: NTILE must return an error when parameter is not stable